[package]
name = "lazycard"
version.workspace = true
edition.workspace = true

[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
sqlite = { path = "crates/sqlite" }
config = { path = "crates/config" }
database = { path = "crates/database" }
markdown = { path = "crates/markdown" }
dioxus = "0.3"
dioxus-desktop = "0.3"
dioxus-router = "0.3"
sir = { version = "0.3", features = ["dioxus"] }
uuid = { version = "1.2", features = ["v4", "fast-rng"] }
chrono = "0.4"
once_cell = "1.17"
rfd = "0.10"
regex = "1.7"

[dependencies]
sqlite = { workspace = true }
config = { workspace = true }
database = { workspace = true }
markdown = { workspace = true }
dioxus = { workspace = true }
dioxus-desktop = { workspace = true }
dioxus-router = { workspace = true }
sir = { workspace = true }
uuid = { workspace = true }
once_cell = { workspace = true }
chrono = { workspace = true }
rfd = { workspace = true }
regex = { workspace = true }
