[package]
name = "lazycard"
version.workspace = true
edition.workspace = true

[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
sqlite = { path = "crates/sqlite" }
config = { path = "crates/config" }
database = { path = "crates/database" }
markdown = { path = "crates/markdown" }
dioxus = { version = "0.5", features = ["desktop", "router"] }
sir = { version = "0.5", features = ["dioxus"] }
uuid = { version = "1.2", features = ["v4", "fast-rng"] }
chrono = "0.4"
once_cell = "1.17"
rfd = "0.14"
regex = "1.7"

[dependencies]
sqlite = { workspace = true }
config = { workspace = true }
database = { workspace = true }
markdown = { workspace = true }
dioxus = { workspace = true }
sir = { workspace = true }
uuid = { workspace = true }
once_cell = { workspace = true }
chrono = { workspace = true }
rfd = { workspace = true }
regex = { workspace = true }
