[package]
name = "lazycard"
version = "0.1.0"
edition = "2021"

[dependencies]
comemo = "0.4.0"
crossterm = "0.28"
image = "0.25"
ratatui = "0.28"
ratatui-image = "2.0"
tar = "0.4.42"
time = "0.3.36"
ttf-parser = "0.25.0"
tui-textarea = "0.6"
typst = "0.11.1"
typst-render = "0.11.1"
typst-svg = "0.11.1"
ureq = "2.10.1"
zune-inflate = "0.2.54"
